--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,12 @@
 name: Build artifacts and push to gh-pages
+
 on:
+  pull_request_target:
+    types: [opened, synchronize, closed, ready_for_review]
   push:
     branches:
-      - develop
-  # pull_request_target:
-  #   types: [closed]
-  #   branches:
-  #     - develop
-  workflow_dispatch:
-
+      - "develop"
+      
 jobs:
   # Build the website and create artifacts
   build_and_create_artifact:
