--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   build:
-    name: build-geoview
+    name: build-geoview-demo
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
